[gd_scene load_steps=6 format=3 uid="uid://bbi0es4lv55g1"]

[ext_resource type="Script" uid="uid://vxoieu3rjgm2" path="res://scripts/systems/game_manager.gd" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://bsx78kuirtgkw" path="res://scenes/world/world_overworld.tscn" id="2_lbhrr"]
[ext_resource type="Script" uid="uid://bqdfebn1pfcjx" path="res://scripts/systems/world_manager.gd" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://coq7sptp1bsje" path="res://scenes/characters/Player.tscn" id="3_iywne"]
[ext_resource type="Script" uid="uid://bwqdlmsx3ppda" path="res://scripts/ui/pause_overlay.gd" id="5_6ms5l"]

[node name="GameManager" type="Node"]
script = ExtResource("1_uwrxv")
initial_world = ExtResource("2_lbhrr")
player_scene = ExtResource("3_iywne")

[node name="WorldManager" type="Node" parent="."]
script = ExtResource("2_yqjtg")

[node name="PauseOverlay" type="CanvasLayer" parent="."]
script = ExtResource("5_6ms5l")

[node name="CenterContainer" type="CenterContainer" parent="PauseOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseOverlay/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PauseOverlay/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "PAUSE MENU"
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="PauseOverlay/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Continue Game"

[node name="SaveButton" type="Button" parent="PauseOverlay/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="PauseOverlay/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="SettingsButton" type="Button" parent="PauseOverlay/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="PauseOverlay/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
